# shitstorm

./: .cproject  .gitignore  .project  CMakeLists.txt  Project Shitstorm.sln  Vector.vcxproj  Vector.vcxproj.filters  global.h  main.cpp  update
Bullet Test/: Bullet Test.cpp  Bullet Test.vcxproj  Bullet Test.vcxproj.filters  stdafx.cpp  stdafx.h
CMakeModules/: FindIrrlicht.cmake  FindOggVorbis.cmake  FindSquirrel.cmake
Events/: EventClasses.h  EventTriggeringObject.cpp
GameLogic/: EngineStatusCode.h  GameTimer.h
OpenAL Test/: OpenAL Test.vcxproj  OpenAL Test.vcxproj.filters  main.cpp  ogg_stream.cpp  ogg_stream.h
Physics/: IrrBtConversion.h  PhysicsManager.h  PhysicsMotionState.h  PhysicsWorld.h
SceneNodes/: PlaneSceneNode.cpp  SceneObject.cpp  SceneObject.h
Scripting/: Bindings.cpp  Scripting.h  ScriptingVM.h
Scripting/Bindings/: IrrlichtBindings.cpp  IrrlichtEnumBindings.cpp  PhysicsBindings.cpp  PhysicsBindings.h  (+1 more)
Shitstorm/: Engine.cpp  Engine.h  Game.cpp  Game.h  GameTimer.cpp  GameTimer.h  GlobalDefines.h  MastEventReceiver.h  Shitstorm.vcxproj  Shitstorm.vcxproj.filters  SpatialObject.cpp  SpatialObject.h  main.cpp
Sound/: PositionalAudioObject.cpp  RoamingSoundListener.cpp  SoundClasses.cpp  SoundDistanceModel.h  SoundListener.cpp  SoundListener.h
Squirrel Test/: Squirrel Test.vcxproj  main.cpp
Utility/: Manager.cpp  Manager.h  Singleton.h
Vector/: Vector.vcxproj  Vector.vcxproj.filters  global.h  linker.h  main.cpp
World/: NamedObject.cpp  ObjectClass.h  WorldObjectFactory.h
src/: CMakeLists.txt  global.h  linker.h  main.cpp
(+184 files in other folders)
